2006-02-13  Johan Dahlin  <jdahlin@async.com.br>

	* examples/validation/personalinformation.glade:
	* examples/validation/personalinformation.py:
	* kiwi/datatypes.py:
	* kiwi/ui/gazpacholoader.py:
	* tests/test_datatypes.py:

	Add a unicode datatype, tests and modify a model attribute in
	personalinformation to use it.

2006-02-09  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/component.py:
	* kiwi/interfaces.py:
	* tests/test_component.py:
	Add a very basic component system, based on code by Ali Asfhar

2006-02-09  Johan Dahlin  <jdahlin@async.com.br>

	* tests/test_argcheck.py: 100% coverage here

	* kiwi/argcheck.py: Remove tests, they're in tests/ now

	* tools/showcoverage: Steal from gazpacho (who stole from flumotion)

	* kiwi/ui/widgets/list.py (List.index): Use is None instead of if,
	return treeiter instead or item.iter.
	(List.__iter__): Implement __iter__ in returned object so iter(klist)
	works.

	* tests/test_List.py: Add tests. Unit coverage up to 50% globally now.

2006-02-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py:
	* tests/test_List.py:

	Add klist::has-rows and tests.

2006-02-04  Johan Dahlin  <jdahlin@async.com.br>

	* setup.py: Move kiwiwidgets to a subdirectory to mirror the layout
	of the installed resources.

2006-02-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List._setup_columns): If there are no
	expanded columns add a fake one after the last one.

2006-02-03  Patrick K O'Brien <pobrien@orbtech.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py: Use set_sort_column_id
	better with column ids. Simplify _on_column__clicked.
	When switching columns, always set to ascending sorting.
	Fixes #2420

2006-02-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dialogs.py: Really make it follow the HIG.
	Copied some code from eel-alert-dialog.c

	Import stuff from gazpacho, save, open, BaseDialog

2006-02-01  Patrick K O'Brien <pobrien@orbtech.com>
